更改了博客的模板

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,11 @@
 ---
 layout: default
 ---
-{% include JB/setup %}
-{% include themes/mark-reid/page.html %}
+
+<section class="post">
+{{ content }}
+</section>
+{% if page.comments %}
+{% include comments.md %}
+{% endif %}
+
