--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,13 +43,13 @@
         <h1>{{ page.title }}</h1>
         </header>
         <nav>
-        <span><a title="home page" class="" href="/">Home</a></span>
-        <span><a title="about" class="" href="/about/">About</a></span>
-        <span><a title="guestbook" class="" href="/guestbook/">Guestbook</a></span>
-        <span><a title="categories" class="" href="/categories/">Categories</a></span>
-        <span><a title="tags" class="" href="/tags/">Tags</a></span>
-        <span><a title="links" class="" href="/links/">Links</a></span>
-        <span><a title="subscribe by RSS" class="" href="/feed/">Subscribe</a></span>
+        <span><a title="主页" class="" href="/">主页</a></span>
+	<span><a title="分类" class="" href="/categories/">分类</a></span>
+        <span><a title="标签" class="" href="/tags/">标签</a></span>
+        <span><a title="链接" class="" href="/links/">链接</a></span>
+	<span><a title="留言" class="" href="/guestbook/">留言</a></span>
+	<span><a title="关于" class="" href="/about/">关于</a></span>
+        <span><a title="订阅 by RSS" class="" href="/feed/">订阅</a></span>
         </nav>
         <article class="content">
         {{ content }}
