--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,14 +44,14 @@
         <h1>{{ page.title }}</h1>
         </header>
         <nav>
-        <span><a title="项目" class="" href="/">博客</a></span>
-        <span><a title="博客" class="" href="/project/">项目</a></span>
+        <!--<span><a title="博客" class="" href="/">博客</a></span>-->
+        <span><a title="项目" class="" href="/project/">项目</a></span>
         <span><a title="分类" class="" href="/categories/">分类</a></span>
         <span><a title="标签" class="" href="/tags/">标签</a></span>
         <span><a title="链接" class="" href="/links/">链接</a></span>
-        <span><a title="留言" class="" href="/guestbook/">留言</a></span>
+        <!--<span><a title="留言" class="" href="/guestbook/">留言</a></span>-->
         <span><a title="关于" class="" href="/about/">关于</a></span>
-        <span><a title="订阅 by RSS" class="" href="/feed/">订阅</a></span>
+        <!--<span><a title="订阅 by RSS" class="" href="/feed/">订阅</a></span>-->
         </nav>
         <article class="content">
         {{ content }}
